--- a/assets/CSS/_background-circles.css
+++ b/assets/CSS/_background-circles.css
@@ -1,4 +1,4 @@
-/* ----------------Background Circles---------------- */
+/* -------------Background Circles------------- */
 div#circles {
 	position: absolute;
 	z-index: -5;
