--- a/assets/CSS/_banner.css
+++ b/assets/CSS/_banner.css
@@ -1,4 +1,4 @@
-/* ----------------Application Banner---------------- */
+/* -------------Application Banner------------- */
 div.app > header.banner {
 	width: 100%;
 	height: 55px;
