--- a/views/_banner.ejs
+++ b/views/_banner.ejs
@@ -1,7 +1,7 @@
 <!-- ------------------------------------------ -->
 <!-- -----------------Partials----------------- -->
 <!-- ------------------------------------------ -->
-<link rel="stylesheet" href="/css/_banner.css" />
+<link rel="stylesheet" href="/CSS/_banner.css" />
 <script defer src="/js/_banner.js"></script>
 <!-- Banner Start -->
 <header class="banner">
