--- a/views/_lower-tabs.ejs
+++ b/views/_lower-tabs.ejs
@@ -1,7 +1,7 @@
 <!-- ------------------------------------------ -->
 <!-- -----------------Partials----------------- -->
 <!-- ------------------------------------------ -->
-<link rel="stylesheet" href="/css/_lower-tabs.css" />
+<link rel="stylesheet" href="/CSS/_lower-tabs.css" />
 <!-- Lower Tabs Start -->
 <div class="taskBar tabs-box">
 	<div
