--- a/views/_upper-tabs.ejs
+++ b/views/_upper-tabs.ejs
@@ -1,7 +1,7 @@
 <!-- ------------------------------------------ -->
 <!-- -----------------Partials----------------- -->
 <!-- ------------------------------------------ -->
-<link rel="stylesheet" href="/css/_upper-tabs.css" />
+<link rel="stylesheet" href="/CSS/_upper-tabs.css" />
 <!-- Upper Tabs Start -->
 <div class="tabs-box">
 	<div class="tabs" id="all" onclick="window.location='/';">All</div>
