--- a/views/all-tasks.ejs
+++ b/views/all-tasks.ejs
@@ -1,7 +1,7 @@
 <!-- ---------------------------------------------- -->
 <!-- -----------------Dynamic Part----------------- -->
 <!-- ---------------------------------------------- -->
-<link rel="stylesheet" href="/css/tasks.css" />
+<link rel="stylesheet" href="/CSS/tasks.css" />
 <script defer src="/js/task.js"></script>
 <div class="scroll">
 	<!-- Tab Content Template Start -->
