--- a/views/_input.ejs
+++ b/views/_input.ejs
@@ -1,7 +1,7 @@
 <!-- ------------------------------------------ -->
 <!-- -----------------Partials----------------- -->
 <!-- ------------------------------------------ -->
-<link rel="stylesheet" href="/css/_input.css" />
+<link rel="stylesheet" href="/CSS/_input.css" />
 <!-- Todo App Input Start -->
 <div class="inputBox">
 	<form action="/tasks/create" method="POST">
